# openglMinicraft

./: CMakeLists.txt  README.md  imgui.ini
include/PerlinNoise/: PerlinNoise.hpp
include/glad/: glad.h
src/: Game.cpp  Main.cpp  Player.cpp  block.cpp  camera.cpp  chunk.cpp  cube_renderer.cpp  glad.c  light.cpp  resource_manager.cpp  shader.cpp  texture.cpp
src/hFiles/: Game.h  Player.h  Settings.h  UI.h  block.h  camera.h  chunk.h  cube_renderer.h  resource_manager.h  shader.h  texture.h
src/shaders/: fragment.glsl  vertex.glsl
src/utility/: EBO.cpp  EBO.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.h  shaderClass.cpp  shaderClass.h
